Fix alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 h1 {
   font-size: 28px;
   text-align: left;
-  margin-left: 300px;
+  padding-left: 12px;
 }
 
 h2 {
